Modified home-callout CSS

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,7 +17,7 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 
-body, .navbar {
+.navbar, .home-callout {
     /* Gradient provided by https://twitter.com/_ighosh */ 
     background: #F1F2B5;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #135058, #F1F2B5);  /* Chrome 10-25, Safari 5.1-6 */
@@ -30,4 +30,11 @@ h1, h2, h3 {
 
 .navbar {
     border: none;
+}
+
+.home-callout {
+    color: black;
+    margin-top: -20px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
